conclusão da sessão blog

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -27,3 +27,7 @@ a{
 	background-image: url('../imagens/spritesheet.png');
 	background-repeat: no-repeat;
 }
+
+#sem{
+	margin-top: 0 !important;
+}
